--- a/css/oai.css
+++ b/css/oai.css
@@ -100,26 +100,112 @@
 
 }
 
+.container {
+	padding: 0 2.25em;
+}
+
+@media (min-width: 72em) {
+
+	.container {
+		padding: 0;
+	}
+
+}
+
+.container {
+	width: 100%;
+}
+
+@media (min-width: 72em) {
+
+	.container {
+		max-width: 60em;
+	}
+
+}
+
 .navbar {
-	-webkit-animation: lightspeed 3s 16 linear;
-	-o-animation: lightspeed 3s 16 linear;
-	animation: lightspeed 3s 16 linear;
+	/*-webkit-animation: lightspeed 3s 16 linear;*/
+	/*-o-animation: lightspeed 3s 16 linear;*/
+	/*animation: lightspeed 3s 16 linear;*/
 	background: -webkit-linear-gradient(90deg, #558b2f 10%, #33691e 90%); /* Chrome 10+, Saf5.1+ */
 	background:    -moz-linear-gradient(90deg, #558b2f 10%, #33691e 90%); /* FF3.6+ */
 	background:     -ms-linear-gradient(90deg, #558b2f 10%, #33691e 90%); /* IE10 */
 	background:      -o-linear-gradient(90deg, #558b2f 10%, #33691e 90%); /* Opera 11.10+ */
 	background:         linear-gradient(90deg, #558b2f 10%, #33691e 90%); /* W3C */
+	background: none;
+	/*box-shadow: 0 1px 1em 2.25em #ffffff;*/
+	background-color: #ffffff;
 	-webkit-transition: all 9s;
 	-moz-transition: all 9s;
 	-ms-transition: all 9s;
 	-o-transition: all 9s;
 	transition: all 9s;
+	min-height: 6em;
+	padding: .875em 0 .625em;
+	/*padding: 1.5em 0 0;*/
 }
 
-.brand img {
-	height: 80px;
-	margin-top: 5px;
-	margin-bottom: 5px;
+.navbar .item a {
+	padding: 0 .5em;
+	margin: 0 .5em;
+}
+
+.navbar .item .link {
+	font-size: 1em;
+	font-weight: 500;
+	line-height: 3;
+}
+
+.navbar .item .link--button {
+	border-radius: 4px;
+	border-style: solid;
+	border-width: 1px;
+	padding: 0 1em;
+}
+
+.navbar .item .link--button:active,
+.navbar .item .link--button:focus,
+.navbar .item .link--button:hover {
+	color: #ffffff;
+}
+
+.navbar .item .link--button:focus {
+	background-color: #0091ea;
+}
+
+.navbar .item .link strong {
+	font-weight: 600;
+}
+
+.navbar .item .brand {
+	padding: 0;
+}
+
+.navbar .item .brand svg {
+	max-height: 3em;
+	-webkit-transition: transform .4s;
+	-moz-transition: transform .4s;
+	-ms-transition: transform .4s;
+	-o-transition: transform .4s;
+	transition: transform .4s;
+}
+
+.navbar .item .brand:hover svg,
+.navbar .item .brand:focus svg {
+	-webkit-transform: scale(1.1);
+	-moz-transform: scale(1.1);
+	-ms-transform: scale(1.1);
+	-o-transform: scale(1.1);
+	transform: scale(1.1);
+}
+
+.brand .slogan {
+	font-size: .875em;
+	font-weight: 700;
+	letter-spacing: -.5pt;
+	white-space: nowrap;
+	margin: 0 0 0 .75em;
 }
 
 @media (max-width: 768px) {
@@ -164,6 +250,28 @@
 
 .hero {
 	/*background-image: url("../img/wt01.jpg");*/
+	position: relative;
+	height: 100vh;
+}
+
+.hero-background,
+.hero-inner,
+.hero-overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+}
+
+.hero-inner {
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-align-items: center;
+	align-items: center;
 }
 
 .hero .container {
@@ -175,6 +283,7 @@
 	/*align-self: flex-start;*/
 	text-align: right;
 	padding: 1em;
+	width: 100%;
 }
 
 .hero .promo {
@@ -222,6 +331,95 @@
 	opacity: 1;
 	transition: opacity 1s ease;
 }
+
+.welcome {
+	display: -webkit-box;
+	-webkit-align-items: center;
+	align-items: center;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-flex-flow: column;
+	flex-flow: column;
+}
+
+.welcome h1,
+.welcome strong {
+	font-weight: 300;
+}
+
+.welcome p {
+	text-transform: uppercase;
+	letter-spacing: 1pt;
+}
+
+.welcome h1 {
+	font-size: 3em;
+	line-height: 1.8;
+	text-align: center;
+}
+
+@media (min-width: 48em) {
+
+	.welcome h1 {
+		font-size: 3.75em;
+		margin: 0 auto;
+	}
+
+    .welcome .horizontal-bar {
+	    border-style: solid;
+	    border-width: 1px;
+	    height: 0;
+	    margin: 0 auto 1.125em;
+	    left: 0;
+	    top: 100%;
+	    width: 14em;
+    }
+
+	.welcome p {
+		font-size: 1.3125em;
+		text-transform: uppercase;
+		letter-spacing: 1pt;
+	}
+
+}
+
+@media (min-width: 60em) {
+
+	.welcome h1 {
+		font-size: 3em;
+	}
+
+}
+
+@media (min-width: 72em) {
+
+	.welcome h1 {
+		font-size: 3.75em;
+		line-height: 1.6;
+	}
+
+	.welcome .horizontal-bar {
+		border-width: 1px;
+		margin: 0 auto 1.5em;
+		width: 18em;
+	}
+
+	.welcome p {
+		font-size: 1.5em;
+	}
+
+}
+
+@media (min-width: 96em) {
+
+	.welcome h1 {
+		font-size: 6em;
+	}
+
+}
+
 
 .fade-in {
 	animation: fade-in 1s ease-in-out 0s 1;
@@ -754,7 +952,7 @@ body > footer .divisor {
 @media (min-width: 48em) {
 
 	.hero .welcome {
-		padding: 1em 2em ;
+		/*padding: 1em 2em ;*/
 	}
 
 	.hero .promo #promo01 p {
