--- a/css/oai.css
+++ b/css/oai.css
@@ -101,7 +101,15 @@
 }
 
 .container {
-	padding: 0 2.25em;
+	padding: 0 1.125em;
+}
+
+@media (min-width: 48em) {
+
+	.container {
+		padding: 0 2.25em;
+	}
+
 }
 
 @media (min-width: 72em) {
@@ -161,6 +169,7 @@
 	border-radius: 4px;
 	border-style: solid;
 	border-width: 1px;
+	border-color: #00b0ff;
 	padding: 0 1em;
 }
 
@@ -170,8 +179,13 @@
 	color: #ffffff;
 }
 
+.navbar .item .link--button:active,
 .navbar .item .link--button:focus {
 	background-color: #0091ea;
+}
+
+.navbar .item .link--button:hover {
+	background-color: #00b0ff;
 }
 
 .navbar .item .link strong {
@@ -182,8 +196,7 @@
 	padding: 0;
 }
 
-.navbar .item .brand svg {
-	max-height: 3em;
+.navbar .item .brand {
 	-webkit-transition: transform .4s;
 	-moz-transition: transform .4s;
 	-ms-transition: transform .4s;
@@ -191,13 +204,18 @@
 	transition: transform .4s;
 }
 
-.navbar .item .brand:hover svg,
-.navbar .item .brand:focus svg {
+.navbar .item .brand:hover,
+.navbar .item .brand:focus {
 	-webkit-transform: scale(1.1);
 	-moz-transform: scale(1.1);
 	-ms-transform: scale(1.1);
 	-o-transform: scale(1.1);
 	transform: scale(1.1);
+}
+
+.navbar .item .brand img,
+.navbar .item .brand svg {
+	max-height: 3em;
 }
 
 .brand .slogan {
@@ -350,8 +368,9 @@
 }
 
 .welcome p {
-	text-transform: uppercase;
 	letter-spacing: 1pt;
+	line-height: 1.6;
+	text-transform: uppercase;
 }
 
 .welcome h1 {
@@ -479,6 +498,36 @@
 	transition: all 1s ease;
 }
 
+/* Text */
+
+.text {
+	text-align: left;
+}
+
+.text p {
+	font-size: 1.125em;
+	font-weight: 300;
+	line-height: 1.6;
+	margin-bottom: 2.25em;
+}
+
+.text-intro {
+	margin-top: 4.5em;
+	margin-bottom: 6em;
+}
+
+.text h2 {
+	display: block;
+	font-size: 3em;
+	font-weight: 400;
+	margin-bottom: .75em;
+	line-height: 1.4;
+}
+
+.text-history {
+	margin-bottom: 4.5em;
+}
+
 @-webkit-keyframes scroll-animation {
 	0% {
 		padding-top: 0;
@@ -563,26 +612,6 @@ body > footer .divisor {
 
 #prices {
 	padding-bottom: 100px;
-}
-
-.services .about {
-}
-
-/*.services .about p,
-.services .about h1 {
-	text-align: center;
-}
-
-.services .about p {
-	line-height: 135%;  135% of font-size [1]
-}
-
-.services .about h1 {
-	font-size: 3em;
-}*/
-
-.history {
-	padding-bottom: 3em;
 }
 
 .services h1 {
