--- a/css/oai.css
+++ b/css/oai.css
@@ -144,11 +144,6 @@
 	background: none;
 	/*box-shadow: 0 1px 1em 2.25em #ffffff;*/
 	background-color: #ffffff;
-	-webkit-transition: all 9s;
-	-moz-transition: all 9s;
-	-ms-transition: all 9s;
-	-o-transition: all 9s;
-	transition: all 9s;
 	min-height: 6em;
 	padding: .875em 0 .625em;
 	/*padding: 1.5em 0 0;*/
@@ -215,7 +210,8 @@
 
 .navbar .item .brand img,
 .navbar .item .brand svg {
-	max-height: 3em;
+	display: block;
+	height: 3em;
 }
 
 .brand .slogan {
@@ -262,93 +258,7 @@
 	stroke-miterlimit: 10;
 }
 
-/*
-	Hero
-*/
 
-.hero {
-	/*background-image: url("../img/wt01.jpg");*/
-	position: relative;
-	height: 100vh;
-}
-
-.hero-background,
-.hero-inner,
-.hero-overlay {
-	position: absolute;
-	top: 0;
-	left: 0;
-	height: 100%;
-	width: 100%;
-}
-
-.hero-inner {
-	display: -webkit-box;
-	display: -moz-box;
-	display: -ms-flexbox;
-	display: -webkit-flex;
-	display: flex;
-	-webkit-align-items: center;
-	align-items: center;
-}
-
-.hero .container {
-	margin-bottom: 0;
-	/*align-items: center;*/
-}
-
-.hero .welcome {
-	/*align-self: flex-start;*/
-	text-align: right;
-	padding: 1em;
-	width: 100%;
-}
-
-.hero .promo {
-	background-color: rgba(255,255,255,.3);
-	/*background-color: rgba(255,255,255,.6);*/
-	border-radius: 2px;
-	min-width: 18em;
-	padding: 5em 1em;
-	text-shadow: 2px 2px 10px #424242;
-}
-
-.hero .promo #promo01 p {
-	font-size: .75em;
-	text-transform: uppercase;
-	max-width: 20em;
-}
-
-.hero .promo #promo01 p .small {
-	font-size: 2.25em;
-}
-
-.hero .promo #promo01 p .x-small {
-	font-size: 1.5em;
-}
-
-.hero .promo #promo01 p .price {
-	font-size: 6em;
-}
-
-.hero .promo #promo01 p .cents {
-	font-size: 1.5em;
-}
-
-.hero .promo #promo01 .btn {  }
-
-.hero .scroll-container {
-	position: absolute;
-	bottom: 30px;
-	text-align: center;
-	width: 100%;
-	left: 0;
-}
-
-.hero .scroll:hover {
-	opacity: 1;
-	transition: opacity 1s ease;
-}
 
 .welcome {
 	display: -webkit-box;
@@ -445,58 +355,7 @@
 	-webkit-animation: fade-in 1s ease-in-out 0s 1;
 }
 
-.hero .scroll {
-	user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	outline: 0;
-}
 
-.hero .scroll:hover .scroll-btn {
-	background-color: rgba(255,255,255,0.2);
-	transition: all 1s ease;
-}
-
-.hero .scroll-text {
-	font-size: 14px;
-	text-shadow: 1px 1px 5px rgba(77,77,77,.6);
-	text-transform: uppercase;
-}
-
-.hero .scroll-btn {
-	align-items: center;
-	background-color: rgba(255,255,255,0.0);
-	border: solid 1px rgba(255,255,255,0.05);
-	border-radius: 50%;
-	display: -webkit-box;
-	display: -moz-box;
-	display: -ms-flexbox;
-	display: -webkit-flex;
-	display: flex;
-	flex-direction: column;
-	height: 52px;
-	justify-content: center;
-	margin: 8px auto 0;
-	width: 52px;
-}
-
-.hero .scroll-btn svg {
-	margin-top: -5px;
-	height: 44px;
-	opacity: .6;
-	transition: opacity 1s ease;
-	width: 44px;
-}
-
-.hero .scroll-btn svg:hover {
-	animation: scroll-animation .6s ease 0s infinite;
-	-webkit-animation: scroll-animation .6s ease 0s infinite;
-	opacity: 1;
-	transition: all 1s ease;
-}
 
 /* Text */
 
@@ -504,60 +363,29 @@
 	text-align: left;
 }
 
+.text h2 {
+	display: block;
+	font-size: 3.75em;
+	font-weight: 400;
+	margin-bottom: .75em;
+	line-height: 1.36;
+}
+
 .text p {
-	font-size: 1.125em;
+	font-size: 1.3125em;
 	font-weight: 300;
 	line-height: 1.6;
 	margin-bottom: 2.25em;
 }
 
 .text-intro {
-	margin-top: 4.5em;
-	margin-bottom: 6em;
-}
-
-.text h2 {
-	display: block;
-	font-size: 3em;
-	font-weight: 400;
-	margin-bottom: .75em;
-	line-height: 1.4;
+	margin: 4.5em 0;
+	max-width: 36em;
+	padding: 1em 0;
 }
 
 .text-history {
 	margin-bottom: 4.5em;
-}
-
-@-webkit-keyframes scroll-animation {
-	0% {
-		padding-top: 0;
-	}
-
-	90% {
-		padding-top: 20px;
-	}
-
-	100% {
-		padding-top: 60px;
-	}
-}
-
-@keyframes scroll-animation {
-	0% {
-		padding-top: 0;
-	}
-
-	90% {
-		padding-top: 20px;
-	}
-
-	100% {
-		padding-top: 60px;
-	}
-}
-
-.hero .scroll-btn path {
-	fill: #ffffff;
 }
 
 /*
@@ -582,37 +410,7 @@ body > footer .divisor {
 	}
 }
 
-/* TEMPORARY USE */
-#prices .pricelist {
-	opacity: 0;
-	transition: all 1s ease;
-}
 
-#prices .pricelist .content {
-	display: none;
-}
-
-#prices.slide-1 .pricelist:nth-child(1),
-#prices.slide-2 .pricelist:nth-child(2),
-#prices.slide-3 .pricelist:nth-child(3) {
-	opacity: 1;
-	transition: all 1s ease;
-}
-
-#prices.slide-1 .pricelist:nth-child(1) .content,
-#prices.slide-2 .pricelist:nth-child(2) .content,
-#prices.slide-3 .pricelist:nth-child(3) .content {
-	display: -webkit-box;
-	display: -moz-box;
-	display: -ms-flexbox;
-	display: -webkit-flex;
-	display: flex;
-
-}
-
-#prices {
-	padding-bottom: 100px;
-}
 
 .services h1 {
 	text-align: left;
@@ -686,278 +484,6 @@ body > footer .divisor {
 	margin-bottom: 2em;
 }
 
-.pricelist .content {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	flex-wrap: wrap;
-	align-items: flex-start
-}
-
-.pricelist .content li {
-	align-items: center;
-	border-radius: 8px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	max-width: 16em;
-	padding: 1.5em 1.125em 1em;
-	text-align: center
-}
-
-@media (min-width: 48em) {
-	.pricelist .content li {
-		padding: 2.25em 1.5em 1.5em;
-		max-width: 16em
-	}
-}
-
-@media (min-width: 60em) {
-	.pricelist .content {
-		flex-wrap: nowrap
-	}
-
-	.pricelist .content li {
-		padding: 2.25em 1.5em 1.5em;
-		max-width: 16em
-	}
-}
-
-@media (min-width: 72em) {
-	.pricelist .content li {
-		padding: 3em 2.25em 1.5em
-	}
-}
-
-.pricelist .content li .title {
-	border-bottom: solid 2px #666;
-	font-size: 1.125em;
-	margin-bottom: 10px;
-	padding-bottom: 10px;
-	text-transform: uppercase
-}
-
-.pricelist .content li .price {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	min-width: 180px
-}
-
-.pricelist .content li .price .dollar {
-	font-size: 40px;
-	align-self: flex-start
-}
-
-.pricelist .content li .price .number {
-	font-size: 3.75em;
-	line-height: 1em;
-	align-self: center
-}
-
-.pricelist .content li .price .decimal {
-	align-self: flex-end
-}
-
-.pricelist .content li .description {
-	font-size: 15px;
-	margin: 15px 0;
-	color: #888
-}
-
-.pricelist .content li .action {
-	background-color: #00bfa5;
-	border: none;
-	border-radius: 25px;
-	font-size: 1em;
-	font-weight: 600;
-	color: #fff;
-	margin: 1em 0 .5em;
-	padding: 10px;
-	opacity: 0;
-	transition: none
-}
-
-.pricelist .content li:hover,
-.pricelist .content li.active {
-	background-color: #fafafa;
-	color: #424242;
-	transition: background .3s linear
-}
-
-.pricelist .content li input {
-	background-color: #eee;
-	border: 2px solid #00bfa5;
-	border-radius: 2px;
-	color: #424242;
-	font-size: 1.125em;
-	font-weight: 300;
-	display: block;
-	margin-top: 1em;
-	padding: 8px 12px
-}
-
-.pricelist.hidden-price .content li .title {
-	font-size: 2.25em
-}
-
-
-.pricelist .content li:hover .send {
-	opacity: 0;
-}
-
-.pricelist .content li .contact {
-	display: flex;
-	flex-direction: column;
-}
-
-.pricelist .content li input,
-.pricelist .content li .response-send {
-	display: none;
-}
-
-.pricelist .content li.active input,
-.pricelist .content li.active .response-send {
-	display: block;
-	border-width: 2px;
-	margin-top: 1em;
-	padding: 8px 12px;
-	height: auto;
-	-webkit-transition: opacity .3s linear .15s;
-	-moz-transition: opacity .3s linear .15s;
-	-o-transition: opacity .3s linear .15s;
-	-ms-transition: opacity .43 linear .15s;
-	transition: opacity .3s linear .15s;
-}
-
-.pricelist .content li.active .alert {
-	height: auto;
-	margin: 1em 0 .5em;
-	padding: 10px;
-	-webkit-transition: opacity .4s linear .35s;
-	-moz-transition: opacity .4s linear .35s;
-	-ms-transition: opacity .4s linear .35s;
-	-o-transition: opacity .4s linear .35s;
-	transition: opacity .4s linear .35s;
-}
-
-.pricelist .content li .alert {
-	font-weight: 400;
-	height: 0;
-	padding: 0;
-	opacity: 0;
-	margin: 0;
-}
-
-.pricelist .content li.success .alert,
-.pricelist .content li.error .alert {
-	opacity: 1;
-	height: auto;
-	margin: 1em 0 .5em;
-	padding: 10px;
-}
-
-.pricelist .content li.active .contact-form {
-	opacity: 1;
-}
-
-.pricelist .content li.active,
-.pricelist .content li.success,
-.pricelist .content li.error {
-	color: #424242;
-	transition: background .3s linear;
-}
-
-.pricelist .content li.active-form .title {
-	border-color: #ffffff;
-}
-
-.pricelist .content li.active-form [data-toggle=contact-form] {
-	opacity: 1;
-	background-color: #757575;
-	transition: background .3s linear;
-}
-
-.pricelist .content li.success [data-toggle=contact-form],
-.pricelist .content li.success .contact-form,
-.pricelist .content li.error [data-toggle=contact-form],
-.pricelist .content li.error .contact-form {
-	display: none;
-}
-
-/*
-	Dynamic Transitions
-*/
-
-/* Price Border Color */
-
-.pricelist .content li:hover .title,
-.pricelist .content li.error .title,
-.pricelist .content li.success .title {
-	border-color: #fafafa
-}
-
-/* Toggle Form Button */
-
-.pricelist .content li:hover .toggle-contact-form,
-.pricelist .content li.active .toggle-contact-form,
-.pricelist .content li.error .toggle-contact-form,
-.pricelist .content li.success .toggle-contact-form {
-	opacity: 1;
-	transition: none
-}
-
-/*
-	Dynamic Strings
-*/
-
-/* Toggle button */
-
-.pricelist .content li .toggle-contact-form:before {
-	content: 'Assine Já!';
-}
-
-.pricelist .content li.request .toggle-contact-form:before {
-	content: 'Consulta!';
-}
-
-.pricelist .content li.active .toggle-contact-form:before,
-.pricelist .content li.success .toggle-contact-form:before {
-	content: 'Voltar';
-}
-
-.pricelist .content li.error .toggle-contact-form:before {
-	content: 'Tentar novamente';
-}
-
-/* Submit Button */
-
-.pricelist .content li .response-send:before {
-	content: 'Solicitar Contato';
-}
-
-.pricelist .content li.active.sent .response-send:before {
-	content: 'Enviando...';
-}
-
-/* Submit Alert */
-
-.pricelist .content li.error .alert:before {
-	content: 'Houve algum erro, tente novamente mais tarde!';
-}
-
-.pricelist .content li.success .alert:before {
-	content: 'Obrigado! Logo entraremos em contato com você!';
-}
-
-.pricelist .content li.error .alert {
-	color: #d50000;
-}
-
-.pricelist .content li.success .alert {
-	color: #00bfa5;
-}
-
 #about .photo {
 	display: block;
 	background-image: url("../dist/img/mac02.jpg");
@@ -976,29 +502,6 @@ body > footer .divisor {
 		color: #FFF;
 	}
 
-}
-
-@media (min-width: 48em) {
-
-	.hero .welcome {
-		/*padding: 1em 2em ;*/
-	}
-
-	.hero .promo #promo01 p {
-		font-size: 0.875em;
-	}
-
-	#about .photo {
-		min-height: 24em;
-	}
-
-}
-
-@media (min-width: 64em) {
-
-	.hero .promo #promo01 p {
-		font-size: 1em;
-	}
 }
 
 .wipe {
@@ -1094,8 +597,6 @@ body > footer .divisor {
 	background-color: #757575;
 	color: #ffffff;
 }
-
-
 
 /*
 	[1] http://practicaltypography.com/line-spacing.html
