--- a/css/cities.css
+++ b/css/cities.css
@@ -5,7 +5,7 @@
 	display: block;
 	float: left;
 	min-height: 100vh;
-	padding: 3em 0;
+	padding: 4.5em 0;
 	width: 100%;
 }
 
@@ -73,7 +73,7 @@
 /* Cities List */
 
 .CitiesList {
-	background-color: rgba(255,255,255,1);
+	background-color: rgba(245,245,245,1);
 	-webkit-transition: background .3s;
 	-moz-transition: background .3s;
 	-ms-transition: background .3s;
@@ -82,7 +82,7 @@
 }
 
 .CitiesList:hover {
-	background-color: rgba(255,255,255,.72);
+	background-color: rgba(245,245,245,.6);
 }
 
 .CitiesList h1,
@@ -124,6 +124,7 @@
 	cursor: default;
 	-webkit-align-items: center;
 	align-items: center;
+	background-color: #f5f5f5;
 	border: solid 1px #039be5;
 	border-radius: 3px;
 	display: -webkit-box;
