--- a/css/cities.css
+++ b/css/cities.css
@@ -81,7 +81,7 @@
 	transition: background .3s;
 }
 
-.CitiesList:hover {
+.Cities:hover .CitiesList {
 	background-color: rgba(245,245,245,.6);
 }
 
@@ -127,6 +127,7 @@
 	background-color: #f5f5f5;
 	border: solid 1px #039be5;
 	border-radius: 3px;
+	color: #039be5;
 	display: -webkit-box;
 	display: -moz-box;
 	display: -ms-flexbox;
@@ -138,7 +139,6 @@
 }
 
 .CitiesItem-select-area:hover {
-	border: solid 1px #039be5;
 	background-color: #039be5;
 	color: #ffffff;
 }
