--- a/css/z_custom.css
+++ b/css/z_custom.css
@@ -359,9 +359,11 @@
 
 .text {
 	padding: 4.5em 0 3em;
-	text-align: left;
+	float: left;
 	position: relative;
 	overflow-x: hidden;
+	text-align: left;
+	width: 100%;
 }
 
 .text-background {
