--- a/css/cities.css
+++ b/css/cities.css
@@ -159,6 +159,8 @@
 	display: -ms-flexbox;
 	display: -webkit-flex;
 	display: flex;
+	-webkit-flex-flow: row wrap;
+	flex-flow: row wrap;
 	-webkit-justify-content: space-around;
 	justify-content: space-around;
 }
@@ -175,7 +177,7 @@
 	flex-flow: column;
 	width: 16em;
 	min-height: 8em;
-	margin-bottom: 1em;
+	margin-bottom: 1.5em;
 }
 
 .OfficeItem h4 {
@@ -200,8 +202,9 @@
 	border: solid 1px #039be5;
 	border-radius: 3px;
 	color: #039be5;
-	padding: .5em 1.5em;
 	line-height: 2.25;
+	margin-bottom: 1em;
+	padding: .5em 1.5em;
 }
 
 .OfficeItem-button:active,
@@ -227,4 +230,11 @@
 	justify-content: center;
 	-webkit-flex-flow: column;
 	flex-flow: column;
+}
+
+.OfficeItemTimetable p {
+	color: #757575;
+	font-size: .875em;
+	line-height: 1.48;
+	margin: 0;
 }
