Add new wallpaper

--- a/css/hero.css
+++ b/css/hero.css
@@ -253,10 +253,10 @@
 
 }
 
-@media (min-width: 64em) {
+@media (min-width: 60em) {
 
 	.welcome {
-		margin: -1em 0 0 -8em;
+		margin: 0 0 0 -2em;
 	}
 
 	.hero .promo #promo01 p {
