--- a/css/contact.css
+++ b/css/contact.css
@@ -29,13 +29,15 @@
 	display: flex;
 	-webkit-flex-flow: row wrap;
 	flex-flow: row wrap;
+	-webkit-justify-content: center;
+	justify-content: center;
 }
 
 /* Contact Methods Nav Item */
 
 .ContactMethodsNavItem {
 	margin: 0 0 1em;
-	min-width: 14em;
+	min-width: 12em;
 }
 
 /* Contact Nav Item select area */
