--- a/css/contact-form.css
+++ b/css/contact-form.css
@@ -54,6 +54,10 @@
 	width: 100%;
 }
 
+.ContactFormFooter .ContactForm-field {
+	width: auto;
+}
+
 .ContactForm-field--submit {
 	padding: 0;
 }
@@ -156,6 +160,62 @@
 	padding: .5em 0;
 }
 
+/* Contact Form Footer */
+
+.ContactFormFooter {
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-flex-flow: row wrap;
+	flex-flow: row wrap;
+	-webkit-justify-content: flex-end;
+	justify-content: flex-end;
+}
+
+/* Contact Form Status */
+
+.ContactFormStatus {
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	height: 100%;
+	padding: 0 1em;
+}
+
+/* Contact Form Status text */
+
+.ContactFormStatus-text {
+	display: none;
+	font-size: .875em;
+	font-weight: 900;
+	letter-spacing: -.5pt;
+}
+
+.ContactForm.is-success .ContactFormStatus-text--success,
+.ContactForm.is-sending .ContactFormStatus-text--sending,
+.ContactForm.is-error .ContactFormStatus-text--error,
+.ContactForm.is-fail .ContactFormStatus-text--fail {
+	-webkit-align-items: center;
+	align-items: center;
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-justify-content: center;
+	justify-content: center;
+}
+
+.ContactForm.is-sending .ContactFormStatus-text--sending {
+	-webkit-animation: sendAnimation infinite .6s ease;
+	-o-animation: sendAnimation infinite .6s ease;
+	animation: sendAnimation infinite .6s ease;
+}
+
 .ContactForm-field .ContactForm-submit {
 	color: #00b8d4;
 	cursor: pointer;
@@ -190,6 +250,70 @@
 	.ContactForm-wrapper {
 		padding: 0 2.25em;
 		width: 100%;
+	}
+
+}
+
+@-webkit-keyframes loadAnimation {
+
+	0% {
+		opacity: 1;
+	}
+
+	50% {
+		opacity: .48;
+	}
+
+	100% {
+		opacity: 1;
+	}
+
+}
+
+@-o-keyframes loadAnimation {
+
+	0% {
+		opacity: 1;
+	}
+
+	50% {
+		opacity: .48;
+	}
+
+	100% {
+		opacity: 1;
+	}
+
+}
+
+@-moz-keyframes sendAnimation {
+
+	0% {
+		opacity: 1;
+	}
+
+	50% {
+		opacity: .48;
+	}
+
+	100% {
+		opacity: 1;
+	}
+
+}
+
+@keyframes loadAnimation {
+
+	0% {
+		opacity: 1;
+	}
+
+	50% {
+		opacity: .48;
+	}
+
+	100% {
+		opacity: 1;
 	}
 
 }
